Paragraphs and Headers & Bolding and Italicizing

--- a/index.html
+++ b/index.html
@@ -8,8 +8,17 @@
     </head>
 
     <body>
-        My First Website!
+        <p>
+            Paragraph Example #1
+        </p>
 
+        <h3>
+            Header Between Paragraphs 
+        </h3>
+        <!--The Paragraph Below Prints 'Example' Italicized and '#2' Bolded-->
+        <p>
+            Paragraph <em> Example </em> <strong> #2</strong> 
+        </p>
     </body>
 
 </html>
