--- a/index.html
+++ b/index.html
@@ -8,17 +8,30 @@
     </head>
 
     <body>
-        <p>
-            Paragraph Example #1
-        </p>
-
-        <h3>
-            Header Between Paragraphs 
-        </h3>
-        <!--The Paragraph Below Prints 'Example' Italicized and '#2' Bolded-->
-        <p>
-            Paragraph <em> Example </em> <strong> #2</strong> 
-        </p>
+        <h1>Favorite Foods</h1>
+       <ul>
+           <li>PROTEIN</li>
+           <li>Beef</li>
+           <li>Caramel M&Ms</li>
+       </ul>
+       <h1>To Do:</h1>
+       <ol>
+          <li>Some Progression Through Odin</li>
+          <li>SHOWER (after gym)</li>
+          <li>Sleep</li>
+       </ol>
+       <h1>Vacation Spots</h1>
+       <ul>
+          <li>Capri</li>
+          <li>Disney World</li>
+          <li>Miami</li>
+       </ul>
+       <h1>Favorite Games</h1>
+       <ol>
+          <li>Terraria</li>
+          <li>Minecraft</li>
+          <li>Warframe</li>
+       </ol>
     </body>
 
 </html>
