Links and Images

--- a/index.html
+++ b/index.html
@@ -8,30 +8,15 @@
     </head>
 
     <body>
-        <h1>Favorite Foods</h1>
-       <ul>
-           <li>PROTEIN</li>
-           <li>Beef</li>
-           <li>Caramel M&Ms</li>
-       </ul>
-       <h1>To Do:</h1>
-       <ol>
-          <li>Some Progression Through Odin</li>
-          <li>SHOWER (after gym)</li>
-          <li>Sleep</li>
-       </ol>
-       <h1>Vacation Spots</h1>
-       <ul>
-          <li>Capri</li>
-          <li>Disney World</li>
-          <li>Miami</li>
-       </ul>
-       <h1>Favorite Games</h1>
-       <ol>
-          <li>Terraria</li>
-          <li>Minecraft</li>
-          <li>Warframe</li>
-       </ol>
+        <h1>Homepage</h1>
+
+        <a href="https://www.theodinproject.com/about">click me</a>
+
+        <a href="./pages/about.html">About</a>
+
+        <img src="https://www.theodinproject.com/mstile-310x310.png" alt="The Odin Project Logo">
+
+        <img src="./images/dog.jpg" alt="Cute Dog Wearing Scarf">
     </body>
 
 </html>
